Prevent crash-inducing recursion of detach due to blur events happening  when widgets with focus get destroyed, by quietly shifting the focus to the view...(#135384, probably #124342 --- best I can tell given imperfect information); also affects some bugs which I separately closed as non-reproducible, but which involved such a sequence

Also fixes freezing in #92497, as we no longer try to find something 
to focus when nothing is focusable..

BUG:92497
BUG:124342
BUG:135384


svn path=/branches/KDE/3.5/kdelibs/; revision=599857